[gd_scene load_steps=19 format=3 uid="uid://c8oqxmm2w2wvv"]

[ext_resource type="Script" path="res://world.gd" id="1_6tkge"]
[ext_resource type="PackedScene" uid="uid://c1j7an8woikyd" path="res://environment.tscn" id="1_iktak"]
[ext_resource type="FontFile" uid="uid://bfdxoj3c567ro" path="res://star_jedi/starjedi/Starjedi.ttf" id="3_32xhs"]
[ext_resource type="Texture2D" uid="uid://8ka2ui7sq36p" path="res://addons/kenney_particle_pack/circle_05.png" id="3_ehmxv"]
[ext_resource type="Texture2D" uid="uid://c5fngalwcn7u8" path="res://images/HealthbarInner.png" id="4_5s3we"]
[ext_resource type="PackedScene" uid="uid://c1qsyptu8q84p" path="res://models/pickups/health.tscn" id="4_x7hoj"]
[ext_resource type="Texture2D" uid="uid://ctlshrsjvki7" path="res://images/HealthbarOutline.png" id="5_4ssen"]
[ext_resource type="Texture2D" uid="uid://b58rbqsn80yqv" path="res://images/AK-47.png" id="6_i3kt7"]
[ext_resource type="PackedScene" uid="uid://qruaik0d22gq" path="res://models/pickups/AmmoBox.tscn" id="7_1iyd3"]
[ext_resource type="Texture2D" uid="uid://nde1qfyis815" path="res://images/AmmoBox.png" id="10_ddh8l"]
[ext_resource type="Texture2D" uid="uid://br2tdv2amywox" path="res://images/CombatKnife.png" id="10_wolt1"]
[ext_resource type="Texture2D" uid="uid://ie0es8j2gol1" path="res://images/Glock-19.png" id="11_ulqyl"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_u5pdl"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_w2qqb"]
sky_material = SubResource("ProceduralSkyMaterial_u5pdl")

[sub_resource type="Environment" id="Environment_6knbf"]
background_mode = 2
sky = SubResource("Sky_w2qqb")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="LabelSettings" id="LabelSettings_0ve3g"]
font = ExtResource("3_32xhs")
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_sp4x1"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_w3qcc"]
line_spacing = 0.0
font_size = 200
font_color = Color(0.758192, 0.758192, 0.758192, 1)
outline_size = 50
outline_color = Color(0, 0, 0, 1)

[node name="World" type="Node"]
script = ExtResource("1_6tkge")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6knbf")

[node name="Environment" parent="." instance=ExtResource("1_iktak")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 119.0
offset_top = 30.0
offset_right = -115.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Declan Battle Royale"
label_settings = SubResource("LabelSettings_0ve3g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
placeholder_text = "*insert host IP address*"
alignment = 1

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Join"

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Host info" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "(one host per game)"
label_settings = SubResource("LabelSettings_sp4x1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Crasshair" type="TextureRect" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
pivot_offset = Vector2(576, 324)
texture = ExtResource("3_ehmxv")
stretch_mode = 5

[node name="HealthBar" type="TextureProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 0
offset_left = 5.0
offset_top = 3.0
offset_right = 513.0
offset_bottom = 49.0
max_value = 3.0
step = 0.01
value = 3.0
nine_patch_stretch = true
stretch_margin_left = 16
stretch_margin_right = 16
texture_under = ExtResource("4_5s3we")
texture_over = ExtResource("5_4ssen")
texture_progress = ExtResource("4_5s3we")
tint_under = Color(0.94902, 0.0509804, 0.0980392, 1)
tint_progress = Color(0.235294, 0.870588, 0.0745098, 1)

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/HUD"]
visible = false
layout_mode = 0
offset_top = 483.52
offset_right = 1066.0
offset_bottom = 1033.52
scale = Vector2(0.3, 0.3)
columns = 2

[node name="AK-47" type="Sprite2D" parent="CanvasLayer/HUD"]
position = Vector2(206, 573)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_i3kt7")

[node name="Glock-19" type="Sprite2D" parent="CanvasLayer/HUD"]
position = Vector2(73, 573)
scale = Vector2(0.3, 0.3)
texture = ExtResource("11_ulqyl")

[node name="CombatKnife" type="Sprite2D" parent="CanvasLayer/HUD"]
position = Vector2(340, 573)
scale = Vector2(0.3, 0.3)
texture = ExtResource("10_wolt1")

[node name="AmmoBox" type="Sprite2D" parent="CanvasLayer/HUD"]
position = Vector2(1056, 595)
scale = Vector2(0.2, 0.2)
texture = ExtResource("10_ddh8l")

[node name="CurrentAmmo" type="Label" parent="CanvasLayer/HUD/AmmoBox"]
offset_left = -285.0
offset_top = -130.0
offset_right = -56.9999
offset_bottom = 143.0
text = "50"
label_settings = SubResource("LabelSettings_w3qcc")

[node name="SpareAmmo" type="Label" parent="CanvasLayer/HUD/AmmoBox"]
offset_left = 60.0
offset_top = -125.0
offset_right = 288.0
offset_bottom = 148.0
text = "50"
label_settings = SubResource("LabelSettings_w3qcc")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn", "res://models/characters/normal_declan.tscn")
spawn_path = NodePath("..")

[node name="Pickups" type="Node" parent="."]

[node name="Health" parent="Pickups" instance=ExtResource("4_x7hoj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.0498, 2.60137, 0)

[node name="AmmoBox" parent="Pickups" instance=ExtResource("7_1iyd3")]
transform = Transform3D(4.88148, 1.0822, 0, -1.0822, 4.88148, 0, 0, 0, 5, -14, 0.85, 12.1)

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
